--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -83,7 +83,13 @@
                                 <a href="">Personlig nettside</a>
                             </div>
                             <div class="nav-link-parent">
-                                <a onclick="" id="pricesToggle">Tilleg<i class="fas fa-sort-down"></i></a>
+                                <a onclick="pricesExtra()" id="pricesToggleExtra">Tilleg<i class="fas fa-sort-down"></i></a>
+                            </div>
+                            <div class="extras" id="pricesExtraDiv">
+                                <div class="nav-link-parent">
+                                    <a href="">Blogg</a>
+                                    <a href="">Ekstra sider</a>
+                                </div>
                             </div>
                         </div>
                     </div>
