--- a/apps/core/templates/popup/cookie.html
+++ b/apps/core/templates/popup/cookie.html
@@ -1,12 +1,24 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static '/scss/parts/popup.css' %}" type="text/css">
+<script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&display=swap" rel="stylesheet">
 
     <div id="popup" class="hidden">
-        <h1>På grunn av høy etterspørsel, så bruker vi litt lengre tid på bestillinger</h1>
-        <button id="accept">Det går fint</button>
+        <div class="content">
+            <div class="logo" id="logo" onclick="window.location.href='/'">
+                <img class="logo1" src="{% static '/images/logo/logo1.png' %}" alt="logo1">
+            </div>
+            <div class="text">
+                <h1>Beklager!</h1>
+                <p>På grunn av høy etterspørsel så bruker vi litt lengre tid på bestillinger</p>
+            </div>
+            <div class="popup-actions">
+                <a id="accept">Den er grei</a>
+            </div>
+        </div>
     </div>
-    <div class="circle" id="popupCircleBackground"></div>
+    <div class="black-overlay" id="blackOverlay"></div>
+    
