--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -204,9 +204,9 @@
   max-width: 400px;
   border-radius: 14px;
   border: none;
-  background: rgba(255, 255, 255, 0.918);
-  -webkit-box-shadow: 0 0 2px 0.5px rgba(130, 130, 130, 0.2);
-          box-shadow: 0 0 2px 0.5px rgba(130, 130, 130, 0.2);
+  background-color: rgba(255, 255, 255, 0.918);
+  -webkit-box-shadow: 0 0 6px 2px rgba(130, 130, 130, 0.2);
+          box-shadow: 0 0 6px 2px rgba(130, 130, 130, 0.2);
 }
 
 .sell-anything .content .card .card-content {
@@ -552,7 +552,7 @@
   left: 0;
   width: 100%;
   height: 300px;
-  background: #EDF3F8;
+  background: #daeeff;
   z-index: -1;
 }
 
@@ -622,108 +622,6 @@
   width: 100%;
   padding: 8px;
   color: white;
-}
-
-.hosting {
-  background: white;
-  width: 100%;
-  height: auto;
-  margin-top: 0;
-  padding: 25px;
-}
-
-.hosting .content .text {
-  text-align: left;
-}
-
-.hosting .content .text .hosting-headingp {
-  color: #183B56;
-  opacity: 0.7;
-  font-size: 13px;
-  font-weight: 800;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  -webkit-transform: translateX(2px) translateY(2px);
-          transform: translateX(2px) translateY(2px);
-}
-
-.hosting .content .text h1 {
-  -webkit-transform: translateY(5px);
-          transform: translateY(5px);
-  color: #183B56;
-  text-shadow: 1px 0 #183B56;
-  letter-spacing: 1px;
-  font-size: 36px;
-  font-weight: 800;
-  line-height: 130%;
-}
-
-.hosting .content .hosting-longp {
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  color: #5a7386;
-  display: block;
-  font-family: Inter, sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  height: auto;
-  line-height: 27px;
-  -webkit-margin-after: 32px;
-          margin-block-end: 32px;
-  -webkit-margin-before: 0px;
-          margin-block-start: 0px;
-  margin-bottom: 0;
-  -webkit-margin-end: 0px;
-          margin-inline-end: 0px;
-  -webkit-margin-start: 0px;
-          margin-inline-start: 0px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-top: 0px;
-  width: 315px;
-}
-
-.hosting-benefits {
-  background: white;
-  width: 100%;
-  height: auto;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0px 25px;
-}
-
-.hosting-benefits .content {
-  text-align: left;
-}
-
-.hosting-benefits .content .flex {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 27px 0;
-}
-
-.hosting-benefits .content .flex .icon {
-  border-radius: 50%;
-  padding: 3px 7px;
-  background: rgba(28, 211, 28, 0.15);
-}
-
-.hosting-benefits .content .flex .icon i {
-  color: rgba(28, 211, 28, 0.534);
-  font-size: 16px;
-}
-
-.hosting-benefits .content .flex p {
-  font-size: 17px;
-  color: black;
-  margin: 0 15px;
-  opacity: 0.8;
-  -webkit-transform: translateY(3px);
-          transform: translateY(3px);
 }
 
 .prices {
@@ -843,88 +741,225 @@
   color: black;
 }
 
-.prices .content .product-section .product-card {
-  margin-block: 48px;
-  height: 400px;
-  padding: 30px;
+.prices .content .product-section {
+  margin-top: 20px;
+}
+
+.prices .content .product-section .product {
+  margin: 40px 0;
+  text-align: left;
+  background: transparent;
   width: 100%;
-  max-width: 400px;
-  border-radius: 7px;
-  border: none;
-  border: 1px solid rgba(0, 0, 0, 0.065);
-  -webkit-box-shadow: 0 0 2px white;
-          box-shadow: 0 0 2px white;
-  -webkit-transition: .3s;
-  transition: .3s;
-  background: white;
-  position: relative;
+  max-width: 340px;
+  -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
+          box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.224);
+  padding: 28px;
+  border-radius: 10px;
 }
 
-.prices .content .product-section .product-card:nth-child(2) {
-  margin-block: 80px auto;
-}
-
-.prices .content .product-section .product-card:active {
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.18);
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.18);
-}
-
-.prices .content .product-section .product-card:focus {
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.18);
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.18);
-}
-
-.prices .content .product-section .product-card:hover {
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.18);
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.18);
-}
-
-.prices .content .product-section .product-card .recommended {
-  width: 150px;
-  background: #007be0;
-  padding: 7px;
-  text-align: center;
-  text-transform: uppercase;
-  margin-top: 15px;
-  position: absolute;
-  left: 0;
-  top: -45px;
-  color: white;
-  font-weight: 800;
-}
-
-.prices .content .product-section .product-card .card-content .card-text {
+.prices .content .product-section .product .product-row-one {
   width: 100%;
-}
-
-.prices .content .product-section .product-card .card-content .card-text .product-name {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  position: relative;
 }
 
-.prices .content .product-section .product-card .card-content .card-text .product-name .product-type {
-  color: #0088F9;
-  font-size: 14px;
-  text-decoration: none;
-  font-weight: 600;
-  font-size: 14px;
-  -webkit-transform: translateX(7px) translateY(2px);
-          transform: translateX(7px) translateY(2px);
-}
-
-.prices .content .product-section .product-card .card-content .card-text .product-name h1 {
+.prices .content .product-section .product .product-row-one .product-name {
+  width: 88%;
+  font-size: 23px;
   color: #183B56;
-  font-size: 30px;
   font-weight: 800;
-  letter-spacing: 0.3px;
+  text-shadow: 1px 0 #183B56;
+  letter-spacing: 1px;
+}
+
+.prices .content .product-section .product .product-row-one .product-tag {
+  color: #0088F9;
+  font-size: 13px;
+  -webkit-transform: translateY(10px) translateX(10px);
+          transform: translateY(10px) translateX(10px);
+}
+
+.prices .content .product-section .product .product-row-one .product-price {
+  color: black;
+  opacity: 0.5;
+  font-size: 15px;
+  width: 12%;
+  -webkit-transform: translateY(3px) translateX(-18px);
+          transform: translateY(3px) translateX(-18px);
+  border-bottom: 2px solid #0088F9;
+}
+
+.prices .content .product-section .product .product-row-two {
+  width: 100%;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.prices .content .product-section .product .product-row-two .flex {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-block: 16px;
+  -webkit-transform: translateX(-6px);
+          transform: translateX(-6px);
+}
+
+.prices .content .product-section .product .product-row-two .flex .icon i {
+  color: #1cd31c;
+  font-size: 13px;
+}
+
+.prices .content .product-section .product .product-row-two .flex .icon-x {
+  margin-right: 15px;
+}
+
+.prices .content .product-section .product .product-row-two .flex .icon-x i {
+  color: rgba(211, 28, 28, 0.534);
+  font-size: 15px;
+  -webkit-transform: translateY(3px) translateX(8px);
+          transform: translateY(3px) translateX(8px);
+}
+
+.prices .content .product-section .product .product-row-two .flex .icon-same {
+  margin-right: 15px;
+  background: rgba(0, 0, 0, 0.834);
+  -webkit-transform: translateY(10px) translateX(8px);
+          transform: translateY(10px) translateX(8px);
+  height: 2px;
+  width: 12px;
+}
+
+.prices .content .product-section .product .product-row-two .flex p {
+  font-size: 14px;
+  color: #1B1B1B;
+  margin: 0 15px;
+  opacity: 0.8;
+  -webkit-transform: translateY(1px);
+          transform: translateY(1px);
+}
+
+.prices .content .product-section .product p {
+  color: #183B56;
+  font-size: 15px;
+  width: 100%;
+}
+
+.prices .content .product-section .product p span {
+  font-weight: 800;
+}
+
+.prices .content .product-section .product.small {
+  display: block;
+  -webkit-transition: .2s;
+  transition: .2s;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.prices .content .product-section .product.small .flex .icon {
+  padding: 0 5.5px;
+  padding-bottom: 0;
+}
+
+.prices .content .product-section .product.small .flex .icon i {
+  -webkit-transform: translateY(3px);
+          transform: translateY(3px);
+}
+
+.prices .content .product-section .product.small .flex p {
+  -webkit-transform: translateX(-7px);
+          transform: translateX(-7px);
+}
+
+.prices .content .product-section .product.small.active {
+  display: none;
+}
+
+.prices .content .product-section .product.small.scale {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.prices .content .product-section .product.small.scale- {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+}
+
+.prices .content .product-section .product.middle {
+  display: none;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.prices .content .product-section .product.middle .flex .icon {
+  padding: 0 5.5px;
+  padding-bottom: 0;
+}
+
+.prices .content .product-section .product.middle .flex .icon i {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.prices .content .product-section .product.middle .flex .icon-x i {
+  -webkit-transform: translateY(-2px) translateX(8px);
+          transform: translateY(-2px) translateX(8px);
+}
+
+.prices .content .product-section .product.middle .flex p {
+  -webkit-transform: translateX(-7px);
+          transform: translateX(-7px);
+}
+
+.prices .content .product-section .product.middle.active {
+  display: block;
+}
+
+.prices .content .product-section .product.middle.scale {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.prices .content .product-section .product.big {
+  display: none;
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.prices .content .product-section .product.big .flex .icon {
+  padding: 0 5.5px;
+  padding-bottom: 0;
+}
+
+.prices .content .product-section .product.big .flex .icon i {
+  -webkit-transform: translateY(0px);
+          transform: translateY(0px);
+}
+
+.prices .content .product-section .product.big .flex .icon-x i {
+  -webkit-transform: translateY(-2px) translateX(8px);
+          transform: translateY(-2px) translateX(8px);
+}
+
+.prices .content .product-section .product.big .flex p {
+  -webkit-transform: translateX(-7px);
+          transform: translateX(-7px);
+}
+
+.prices .content .product-section .product.big.active {
+  display: block;
+}
+
+.prices .content .product-section .product.big.scale {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .our-story {
