--- a/static/scss/parts/popup.scss
+++ b/static/scss/parts/popup.scss
@@ -1,61 +1,88 @@
 // STANDARD PHONE
+.black-overlay{
+    background: rgba(0, 0, 0, 0.562);
+    width: 100%;
+    height: 10000000000000px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    &.show{
+        display: block;
+    }
+}
     #popup{
         opacity: 1;
-        padding: 0px 20px 50px 20px;
         position: fixed;
-        bottom: 35%;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 85%;
-        height: 250px;
-        z-index: 10;
-        text-align: center;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: auto;
+        padding-block: 25px;
         background: rgb(250, 250, 250);
-        box-shadow: 0px 1px 50px rgb(60, 84, 160);
-        transition: all .5s ease-in-out;
+        transition: .5s;
         pointer-events: visible;
-        border-radius: 5%;
-        z-index: 100000;
-        h1{
-            width: auto;
-            color: black;
-            font-size: 18px;
-            margin: 20px auto;
-            font-family: 'Sniglet', cursive;
-            transform: translateY(10px);
-        }
-        button{
-            padding: 5px;
-            width: 50%;
-            text-align: center;
-            background: linear-gradient(135deg,rgb(60, 84, 160), #7996f8);    
-            box-shadow: 1.5px 3px 2px rgb(60, 84, 160);
-            border: 2px solid transparent; 
-            color: white; 
-            border-radius: 4px;
-            transform: translateY(50px);
-        }
+        z-index: 100000000000000000000;
         &.hidden{
+            bottom: -200px;
             opacity: 0;
             pointer-events: none;
         }
-    }
-    .circle{
-        border-radius: 100%;
-        // background: rgb(7, 24, 82);
-        background: rgb(30, 30, 30);
-        width: 100px;
-        height: 100px;
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        z-index: 100;
-        pointer-events: none;
-        opacity: 0;
-        transform: scale(20);
-        &.active{
-            opacity: 1;
-            // background: rgb(76, 102, 187);
-            background: rgba(10, 10, 10, 0.507);
+        .content{
+            width: 100%;
+            padding: 30px;
+            .logo{
+                transition: .8s;
+                cursor: pointer;
+                width: auto;
+                height: auto;
+                z-index: 1000;
+                img{
+                    height: auto;
+                    width: 60px;
+                }
+            }
+            .text{
+                margin-top: 20px;
+                text-align: left;
+                h1{
+                    color: #183B56;
+                    text-shadow: 1px 0 #183B56;
+                    letter-spacing:1px;    
+                    font-size: 30px;
+                    font-weight: 800;
+                }
+                p{
+                    box-sizing: border-box;
+                    color: rgb(90, 115, 134);
+                    display: block;
+                    font-family: Inter, sans-serif;
+                    font-size: 16px;
+                    font-weight: 400;
+                    height: auto;
+                    line-height: 27px;
+                    margin-block-end: 32px;
+                    margin-block-start: 0px;
+                    margin-bottom: 0;
+                    margin-inline-end: 0px;
+                    margin-inline-start: 0px;
+                    margin-left: 0px;
+                    margin-right: 0px;
+                    margin-top: 0px;
+                }
+            }
+            .popup-actions{
+                margin-top: 25px;
+                a{
+                    border-radius: 4px;
+                    width: 80px;
+                    padding: 7px;
+                    text-align: center;
+                    font-size: 15px;
+                    background-color: #0088F9;
+                    color: white;
+                }
+            }
         }
     }
