--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -1,11 +1,10 @@
 #footer {
   width: 100%;
-  height: auto;
+  height: 100%;
   padding: 15px;
-  background: #028cfd;
+  background-color: white;
   position: relative;
   padding-bottom: 35px;
-  padding-top: 20px;
 }
 
 #footer .footer-section {
@@ -20,7 +19,7 @@
 }
 
 #footer .footer-section .footer-ul h1 {
-  color: white;
+  color: #252323;
   letter-spacing: 1px;
   font-size: 22px;
   font-weight: 800;
@@ -34,7 +33,7 @@
 #footer .footer-section .footer-ul .footer-li a {
   display: inline-block;
   width: 100%;
-  color: white;
+  color: #252323;
   font-size: 14px;
   padding: 5px;
   opacity: 0.7;
@@ -70,7 +69,7 @@
   margin: 13px;
   font-size: 22px;
   padding: 7px;
-  color: white;
+  color: #252323;
 }
 
 #footer .social-icons i:hover {
@@ -94,6 +93,61 @@
   color: white;
   font-size: 13px;
   opacity: 0.8;
+}
+
+#footer #newsletter {
+  margin-bottom: 15px;
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  padding: 32px 15px;
+}
+
+#footer #newsletter h1 {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  color: #183B56;
+  text-shadow: 1px 0 #183B56;
+  letter-spacing: 1px;
+  font-size: 30px;
+  font-weight: 800;
+}
+
+#footer #newsletter .content input {
+  padding: 5px;
+  border-radius: 4px;
+  border: 2px solid #0089f91f;
+  outline: none;
+  color: #183B56;
+  font-size: 13px;
+  width: 88%;
+  max-width: 500px;
+  font-weight: 600;
+  height: 45px;
+}
+
+#footer #newsletter .content label {
+  color: #183B56;
+  font-size: 15px;
+  font-weight: 800;
+}
+
+#footer #newsletter .content button {
+  border-radius: 4px;
+  width: 180px;
+  font-size: 16px;
+  padding: 10px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  color: white;
+  outline: none;
+  border: none;
+  background: #0082ec;
+  margin-top: 20px;
+}
+
+#footer #newsletter #footerNewsLetterAlert {
+  margin-top: 15px;
 }
 
 @media only screen and (min-device-width: 1024px) {
