--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -1,19 +1,19 @@
 // STANDARD PHONE
 #footer{
     width: 100%;
-    height: auto;
+    height: 100%;
     padding: 15px;
-    background: #028cfd;
+    // background: #028cfd;
+    background-color: white;
     position: relative;
     padding-bottom: 35px;
-    padding-top: 20px;
     .footer-section{
         display: flex;
         .footer-ul{
             width: 50%;
             text-align: center;
             h1{
-                color: white;
+                color: rgb(37, 35, 35);
                 letter-spacing:1px;    
                 font-size: 22px;
                 font-weight: 800;
@@ -24,7 +24,7 @@
                 a{
                     display: inline-block;
                     width: 100%;
-                    color: white;
+                    color: rgb(37, 35, 35);
                     font-size: 14px;
                     padding: 5px;
                     opacity: 0.7;
@@ -51,7 +51,7 @@
             margin: 13px;
             font-size: 22px;
             padding: 7px;
-            color: white;
+            color: rgb(37, 35, 35);
             &:hover{
                 background: rgba(150, 150, 150, 0.6);
             }
@@ -72,6 +72,55 @@
             color: white;
             font-size: 13px;
             opacity: 0.8;
+        }
+    }
+    #newsletter{
+        margin-bottom: 15px;
+        width: 100%;
+        height: auto;
+        border-radius: 4px;
+        padding: 32px 15px;
+        h1{
+            transform: translateY(-10px);
+            color: #183B56;
+            text-shadow: 1px 0 #183B56;
+            letter-spacing:1px;    
+            font-size: 30px;
+            font-weight: 800;
+        }
+        .content{
+            input{
+                padding: 5px;
+                border-radius: 4px;
+                border: 2px solid #0089f91f;
+                outline: none;
+                color: #183B56;
+                font-size: 13px;
+                width: 88%;
+                max-width: 500px;
+                font-weight: 600;
+                height: 45px;
+              }
+              label{
+                color: #183B56;
+                font-size: 15px;
+                font-weight: 800;
+              }
+              button{
+                border-radius: 4px;
+                width: 180px;
+                font-size: 16px;
+                padding: 10px;
+                transition: all .2s ease-in-out;
+                color: white;
+                outline: none;
+                border: none;    
+                background: #0082ec;
+                margin-top: 20px;
+              }
+        }
+        #footerNewsLetterAlert{
+            margin-top: 15px;
         }
     }
 }
